generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
}

model User {
  id             Int      @id @default(autoincrement())
  email          String   @unique
  name           String
  password       String
  roles          String[]
  profileId      Int?     @unique
  profile        Profile? @relation(references: [id], fields: [profileId], onDelete: Cascade)
  posts          Post[]
  referralUserId Int?
  referralUser   User?    @relation("referralUser", references: [id], fields: [referralUserId])
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  tags           Tags[]
  referralUsers  User[]   @relation("referralUser")
}

model Profile {
  id              Int      @id @default(autoincrement())
  profileImageUrl String
  gender          GENDER
  age             Int
  birthdate       DateTime
  user            User?
}

model Post {
  id          Int     @id @default(autoincrement())
  title       String
  authorId    Int
  author      User    @relation(references: [id], fields: [authorId])
  isPublished Boolean @default(true)
  isScheduled Boolean @default(false)
  scheduledAt DateTime?
  createdAt         DateTime            @default(now())
  updatedAt         DateTime            @updatedAt
  tags              Tags[]
  categoriesOnPosts CategoriesOnPosts[]
  postImage         PostImage[]
}

model Category {
  id                Int                 @id @default(autoincrement())
  name              String
  categoriesOnPosts CategoriesOnPosts[]
}

model CategoriesOnPosts {
  id         Int      @id @default(autoincrement())
  postId     Int
  post       Post     @relation(references: [id], fields: [postId], onDelete: Cascade)
  categoryId Int
  category   Category @relation(references: [id], fields: [categoryId],onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Tags {
  id     Int  @id @default(autoincrement())
  postId Int
  post   Post @relation(references: [id], fields: [postId],onDelete: Cascade)
  userId Int
  user   User @relation(references: [id], fields: [userId])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model PostImage {
  id      Int    @id @default(autoincrement())
  postImageUrl     String
  postId  Int
  post    Post   @relation(fields: [postId], references: [id], onDelete: Cascade)
}

enum GENDER {
  MALE
  FEMALE
  OTHER
}

