//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  name String [not null]
  password String [not null]
  roles String[] [not null]
  profileId Int [unique]
  profile Profile
  posts Post [not null]
  referralUserId Int
  referralUser User
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tags Tags [not null]
  referralUsers User [not null]
}

Table Profile {
  id Int [pk, increment]
  profileImageUrl String [not null]
  gender GENDER [not null]
  age Int [not null]
  birthdate DateTime [not null]
  user User
}

Table Post {
  id Int [pk, increment]
  title String [not null]
  authorId Int [not null]
  author User [not null]
  isPublished Boolean [not null, default: true]
  isScheduled Boolean [not null, default: false]
  scheduledAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  tags Tags [not null]
  categoriesOnPosts CategoriesOnPosts [not null]
  postImage PostImage [not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  categoriesOnPosts CategoriesOnPosts [not null]
}

Table CategoriesOnPosts {
  id Int [pk, increment]
  postId Int [not null]
  post Post [not null]
  categoryId Int [not null]
  category Category [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Tags {
  id Int [pk, increment]
  postId Int [not null]
  post Post [not null]
  userId Int [not null]
  user User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table PostImage {
  id Int [pk, increment]
  postImageUrl String [not null]
  postId Int [not null]
  post Post [not null]
}

Enum GENDER {
  MALE
  FEMALE
  OTHER
}

Ref: User.profileId - Profile.id [delete: Cascade]

Ref: User.referralUserId - User.id

Ref: Post.authorId > User.id

Ref: CategoriesOnPosts.postId > Post.id [delete: Cascade]

Ref: CategoriesOnPosts.categoryId > Category.id [delete: Cascade]

Ref: Tags.postId > Post.id [delete: Cascade]

Ref: Tags.userId > User.id

Ref: PostImage.postId > Post.id [delete: Cascade]